Efmub-Ogy/src/objects/Customer_Compensation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Compensations</relationshipLabel>
        <relationshipName>Customer_Compensations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Compensations</relationshipLabel>
        <relationshipName>Customer_Compensations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Claim_Amount__c</fullName>
        <label>Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusion_Amount__c</fullName>
        <label>Exclusion Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclusion_Reason__c</fullName>
        <label>Exclusion Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artistic Items</fullName>
                </value>
                <value>
                    <fullName>Cash High Value</fullName>
                </value>
                <value>
                    <fullName>Confiscation of Items by Local Government</fullName>
                </value>
                <value>
                    <fullName>Cremains</fullName>
                </value>
                <value>
                    <fullName>Electronic or Mechanical Items</fullName>
                </value>
                <value>
                    <fullName>Fragile Items</fullName>
                </value>
                <value>
                    <fullName>Jewelry or Precious Metals</fullName>
                </value>
                <value>
                    <fullName>Musical instrumentals and Equipment</fullName>
                </value>
                <value>
                    <fullName>Perishable Items</fullName>
                </value>
                <value>
                    <fullName>Photographic/Cinematographic Equipment</fullName>
                </value>
                <value>
                    <fullName>Precision Items</fullName>
                </value>
                <value>
                    <fullName>Religious Totems/Artifacts</fullName>
                </value>
                <value>
                    <fullName>Security Non-Sanctioned Items</fullName>
                </value>
                <value>
                    <fullName>Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>Valuable Papers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <label>Goodwill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Compensation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Customer Compensation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Compensations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Exclusion_Reason_Required</fullName>
        <active>true</active>
        <description>Exclusion Reason is required when Exclusion Amount is entered</description>
        <errorConditionFormula>AND(
!ISBLANK( Exclusion_Amount__c ),
ISBLANK( Exclusion_Reason__c )
)</errorConditionFormula>
        <errorMessage>Exclusion Reason is required</errorMessage>
    </validationRules>
</CustomObject>